--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "next": "^8.1.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-modal": "^3.8.1",
     "react-slick": "^0.24.0",
     "slick-carousel": "^1.8.1"
   },
