--- a/now.json
+++ b/now.json
@@ -1,3 +1,7 @@
 {
-  "version": 2
+  "version": 2,
+  "name": "Identicons",
+  "builds": [
+    { "src": "package.json", "use": "@now/next" }
+  ]
 }
