--- a/now.json
+++ b/now.json
@@ -1,6 +1,7 @@
 {
   "version": 2,
   "name": "Identicons",
+  "alias": ["identicons.dev"],
   "builds": [
     { "src": "package.json", "use": "@now/next" }
   ]
