--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "now-build": "next build"
   },
   "dependencies": {
-    "next": "^8.1.0",
+    "next": "^8.1.1-canary.64",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-modal": "^3.8.1",
